[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rlb3_upkie"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pybullet >=3",
    "rl-zoo3 >= 2.6.0",
    "upkie >= 10.0.0",
]
keywords = ["wheeled", "biped", "robot", "reinforcement", "learning", "robotics"]

[project.urls]
Source = "https://github.com/upkie/rlb3_upkie"
Tracker = "https://github.com/upkie/rlb3_upkie/issues"
Changelog = "https://github.com/upkie/rlb3_upkie/blob/main/CHANGELOG.md"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pybullet = ">=3"
stable-baselines3 = ">=2.3.0"
tensorboard = "*"
upkie = ">=10.0.0"

[tool.pixi.pypi-dependencies]
rlb3_upkie = { path = ".", editable = true }

[tool.pixi.tasks]
train = { cmd = "python -m rlb3_upkie.train --env Upkie-PyBullet-Pendulum --hyperparams n_envs:{{ n_envs }} {% if show == 'with_gui' %}--env-kwargs gui:True{% endif %}", args = ["n_envs", "show"] }
enjoy = "python -m rlb3_upkie.enjoy --env Upkie-PyBullet-Pendulum"

[tool.pixi.feature.coverage.dependencies]
coveralls = ">=4.0.0"

[tool.pixi.feature.coverage.tasks]
coverage-run = { cmd = "coverage run -m unittest discover --failfast", depends-on = ["coverage-erase"] }
coverage = { cmd = "coverage report --include=\"rlb3_upkie/*\"", depends-on = ["coverage-run"] }
coveralls = { cmd = "coveralls --service=github" }

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.4.3"

[tool.pixi.feature.lint.tasks]
lint = { cmd = "ruff check rlb3_upkie && ruff format --check rlb3_upkie" }

[tool.pixi.feature.py310]
dependencies = { python = "3.10.*" }

[tool.pixi.feature.py311]
dependencies = { python = "3.11.*" }

[tool.pixi.feature.py312]
dependencies = { python = "3.12.*" }

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest tests/"

[tool.pixi.environments]
coverage = { features = ["coverage"], solve-group = "default" }
default = { features = [], solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }
test-py310 = { features = ["py310", "test"], solve-group = "py310" }
test-py311 = { features = ["py311", "test"], solve-group = "py311" }
test-py312 = { features = ["py312", "test"], solve-group = "py312" }

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]
per-file-ignores = { "*/tests/*.py" = ["D"] }
pydocstyle = { convention = "numpy" }
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
